# ielts-speaking-copilot

./: .gitignore  AGENTS.md  DEVELOPMENT.md  MANUAL-VERIFICATION-V0.1.md  PRD-V0.1-IELTS-Speaking-Copilot.md  README.md  V0.2-DEVELOPMENT-PLAN.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: clipboard.test.ts  clipboard.ts  format.test.ts  format.ts  history.test.ts  history.ts  mock-ai.ts  mock-flow.test.ts  model-options.test.ts  model-options.ts  playback.test.ts  playback.ts  provider-diagnostics.test.ts  provider-diagnostics.ts  providers.test.ts  providers.ts  scorecard.test.ts  scorecard.ts  settings-validation.test.ts  settings-validation.ts  storage.ts  types.ts
