[package]
name = "ielts-speaking-copilot"
version = "0.2.0"
description = "Local desktop workspace for IELTS speaking feedback"
authors = ["IELTS Speaking Copilot"]
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "ielts_speaking_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
